# udacity_ds_term2_capstone_sparkify

./: .gitignore  README.md  blogpost.txt  notebook.ipynb  pyproject.toml  tree.txt
