[tool.poetry]
name = "udacity-ds-term2-capstone-sparkify"
version = "0.1.0"
description = ""
authors = ["Matthew.Hull"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
ydata-profiling = "^4.3.1"
databricks-connect = "~11.3"
ipykernel = "^6.28.0"
pyarrow = "^14.0.2"
ipywidgets = "^8.1.1"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
seaborn = "~0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
